# FGDev

./: CMakeLists.txt  README.md  prj.conf  uart.overlay
boards/: xiao_esp32c6.overlay
drivers/: aht10_driver.c  aht10_driver.h  max17043_driver.c  max17043_driver.h  soil_moisture_sensor.c  soil_moisture_sensor.h
handlers/: aws_mqtt.c  ble_provisioning.c  button_handler.c  credentials.c
include/: config.h
resources/: ClientCert.pem.crt  ClientKey.pem
src/: main.c
